<?xml version="1.0"?>
<package format="2">
  <name>laser_tracker</name>
  <version>0.0.0</version>
  <description>The CoNA_HF_v2 laser_tracker package</description>

  <maintainer email="jhkim@cogaplex.com">allenkim</maintainer>

  <license>COGAPLEX</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>cona_msgs</depend>
  <depend>dynamixel_workbench_msgs</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <export>

  </export>
</package>
